--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli",
-  "version": "3.14.0",
+  "version": "3.14.0-intercom-broccoli-state.1",
   "description": "Command line tool for developing ambitious ember.js apps",
   "keywords": [
     "app",
